--- a/index.html
+++ b/index.html
@@ -53,6 +53,38 @@
 </aside>
 <main class="main full-width">
 <section class=article-list>
+<article class=has-image>
+<header class=article-header>
+<div class=article-image>
+<a href=/p/csapp-archlab-a-simple-solution/>
+<img src=/p/csapp-archlab-a-simple-solution/2021-10-19_01-35_hue4f8f75195f81dbb9b9f92c99c6acf7b_93582_800x0_resize_box_3.png srcset="/p/csapp-archlab-a-simple-solution/2021-10-19_01-35_hue4f8f75195f81dbb9b9f92c99c6acf7b_93582_800x0_resize_box_3.png 800w, /p/csapp-archlab-a-simple-solution/2021-10-19_01-35_hue4f8f75195f81dbb9b9f92c99c6acf7b_93582_1600x0_resize_box_3.png 1600w" width=800 height=486 loading=lazy alt="Featured image of post CSAPP Archlab：优化流水线以提高分数">
+</a>
+</div>
+<div class=article-details>
+<header class=article-category>
+<a href=/categories/csapp/>
+csapp
+</a>
+</header>
+<h2 class=article-title>
+<a href=/p/csapp-archlab-a-simple-solution/>CSAPP Archlab：优化流水线以提高分数</a>
+</h2>
+<h3 class=article-subtitle>
+一个简单的满分解法
+</h3>
+<footer class=article-time>
+<div><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-calendar-time" width="56" height="56" viewBox="0 0 24 24" stroke-width="2" stroke="currentcolor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z"/><path d="M11.795 21H5a2 2 0 01-2-2V7a2 2 0 012-2h12a2 2 0 012 2v4"/><circle cx="18" cy="18" r="4"/><path d="M15 3v4"/><path d="M7 3v4"/><path d="M3 11h16"/><path d="M18 16.496V18l1 1"/></svg>
+<time class=article-time--published>Oct 17, 2021</time>
+</div>
+<div><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-clock" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentcolor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z"/><circle cx="12" cy="12" r="9"/><polyline points="12 7 12 12 15 15"/></svg>
+<time class=article-time--reading>
+阅读时长: 8 分钟
+</time>
+</div>
+</footer>
+</div>
+</header>
+</article>
 </section>
 <footer class=site-footer>
 <section class=copyright>
@@ -80,6 +112,12 @@ Theme <b><a href=https://github.com/CaiJimmy/hugo-theme-stack target=_blank rel=
 </div>
 <h2 class="widget-title section-title">归档</h2>
 <div class=widget-archive--list>
+<div class=archives-year>
+<a href=/archives/#2021>
+<span class=year>2021</span>
+<span class=count>1</span>
+</a>
+</div>
 </div>
 </section>
 <section class="widget tagCloud">
@@ -87,6 +125,18 @@ Theme <b><a href=https://github.com/CaiJimmy/hugo-theme-stack target=_blank rel=
 </div>
 <h2 class="widget-title section-title">标签云</h2>
 <div class=tagCloud-tags>
+<a href=/tags/archlab/ class=font_size_1>
+archlab
+</a>
+<a href=/tags/csapp/ class=font_size_1>
+csapp
+</a>
+<a href=/tags/pipe-full.hcl/ class=font_size_1>
+pipe-full.hcl
+</a>
+<a href=/tags/%E6%B5%81%E6%B0%B4%E7%BA%BF/ class=font_size_1>
+流水线
+</a>
 </div>
 </section>
 </aside>
